--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <blockquote><i>This site is made from vanilla HTML and the default new.css theme. <a href="https://github.com/xz/new.css-site/blob/master/index.html">View Source</a></i></blockquote>
     
-    <p>linux enthuasist, i love computer thats it lol, i listen to carti alot</p>
+    <p>linux enthuasist, i love computer thats it lol, i listen to carti alot and music enthuasist so yea..</p>
 
     <h1>Contact Methods</h1>
 
